[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxydhcpd"
dynamic = ["version"]
description = "A proxy DHCP server in pure Python 3"
authors = [
    { name = "Guilherme Moro", email = "guilherme.moro@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Boot",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/gmoro/proxyDHCPd"
Repository = "https://github.com/gmoro/proxyDHCPd"
"Bug Tracker" = "https://github.com/gmoro/proxyDHCPd/issues"

[tool.setuptools.dynamic]
version = {attr = "proxydhcpd.__version__"}

[tool.setuptools]
packages = ["proxydhcpd", "proxydhcpd.dhcplib"]

[project.scripts]
proxydhcpd = "proxydhcpd.cli:main"

[tool.setuptools.package-data]
"*" = ["proxy.ini"]
